百度统计改为http

--- a/test.html
+++ b/test.html
@@ -17,7 +17,7 @@
 		var _hmt = _hmt || [];
 		(function() {
 			var hm = document.createElement("script");
-			hm.src = "https://hm.baidu.com/hm.js?30193fea3a2c0b2b25a9e82fb7cc5aba";
+			hm.src = "http://hm.baidu.com/hm.js?30193fea3a2c0b2b25a9e82fb7cc5aba";
 			var s = document.getElementsByTagName("script")[0]; 
 			s.parentNode.insertBefore(hm, s);
 		})();
