--- a/test.html
+++ b/test.html
@@ -36,7 +36,7 @@
 	<script>
 		$(".span7").bind("click", function() {
 			$("div").text("点了tackevent");
-			_hmt.push(['_trackEvent', "测试", "click_span7"]);
+			_hmt.push(['_trackEvent', '音乐测试', '播放', '北京欢迎您']);
 		});
  
 		setTimeout(function() {
