--- a/test.html
+++ b/test.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html>
- 
+<html> 
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
@@ -36,7 +35,7 @@
 	<script>
 		$(".span7").bind("click", function() {
 			$("div").text("点了tackevent");
-			_hmt.push(['_trackEvent', '音乐测试', '播放', '北京欢迎您']);
+			_hmt.push(['_trackEvent', '*音乐测试*', '*播放*', '*北京欢迎您*']);
 		});
  
 		setTimeout(function() {
