--- a/test.html
+++ b/test.html
@@ -35,7 +35,7 @@
 	<script>
 		$(".span7").bind("click", function() {
 			$("div").text("点了tackevent");
-			_hmt.push(['_trackEvent', "'1*音乐测试*'1", "'1*播放*'1", "'1*北京欢迎您*'1"]);
+			_hmt.push(['_trackEvent', "'0音乐测试*", "%播放-", "/北京欢迎您`"]);
 		});
  
 		setTimeout(function() {
