--- a/test_cnzz.html
+++ b/test_cnzz.html
@@ -13,21 +13,19 @@
 			}
 		</style>
 		<script>
-		var _hmt = _hmt || [];
-		(function() {
-			var hm = document.createElement("script");
-			hm.src = "https://hm.baidu.com/hm.js?30193fea3a2c0b2b25a9e82fb7cc5aba";
-			var s = document.getElementsByTagName("script")[0]; 
-			s.parentNode.insertBefore(hm, s);
-		})();
-	</script>
-
-
-
+			var _czc = _czc || [];
+			_czc.push(["_setAccount", "1275482869"]);
+		</script>
 	</head>
  
 	<body>
-		备注：百度站长统计
+	
+		<script type="text/javascript">
+			var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+			document.write(unescape("%3Cspan id='cnzz_stat_icon_1275482869'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s96.cnzz.com/z_stat.php%3Fid%3D1275482869' type='text/javascript'%3E%3C/script%3E"));
+		</script>
+	
+		备注：cnzz站长统计
 		<span class="span7">tackevent</span>
 		<div style="width: 100px;height:20px;margin-top: 200px;margin-left: 200px;"></div>
 	</body>
@@ -35,7 +33,7 @@
 	<script>
 		$(".span7").bind("click", function() {
 			$("div").text("点了tackevent");
-			_hmt.push(['_trackEvent', "'0音乐测试*", "%播放-", "音乐", "/北京欢迎您\\"]);
+			_czc.push(['_trackEvent', "'0音乐测试*", "%播放-", "音乐", "/北京欢迎您\\"]);
 		});
  
 		setTimeout(function() {
