--- a/test_cnzz.html
+++ b/test_cnzz.html
@@ -22,7 +22,7 @@
 	
 		<script type="text/javascript">
 			var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-			document.write(unescape("%3Cspan id='cnzz_stat_icon_1275482869'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s96.cnzz.com/z_stat.php%3Fid%3D1275482869' type='text/javascript'%3E%3C/script%3E"));
+			document.write(unescape("%3Cspan id='cnzz_stat_icon_1275482869'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s96.cnzz.com/z_stat.php%3Fid%3D1275482869%26online%3D1' type='text/javascript'%3E%3C/script%3E"));
 		</script>
 	
 		备注：cnzz站长统计
