--- a/test_cnzz.html
+++ b/test_cnzz.html
@@ -33,7 +33,10 @@
 	<script>
 		$(".span7").bind("click", function() {
 			$("div").text("点了tackevent");
+			_czc.push(['_setAccount', "1275482869");
 			_czc.push(['_trackEvent', "'0音乐测试*", "%播放-", "音乐", 100]);
+			_czc.push(['_setAccount', "1275482869");
+			_czc.push(['_setAutoPageview', true]);
 		});
  
 		setTimeout(function() {
