--- a/test.html
+++ b/test.html
@@ -35,7 +35,9 @@
 	<script>
 		$(".span7").bind("click", function() {
 			$("div").text("点了tackevent");
+			_hmt.push(['_setAccount', "30193fea3a2c0b2b25a9e82fb7cc5aba");
 			_hmt.push(['_trackEvent', "'0音乐测试*", "%播放-", "音乐", "/北京欢迎您\\"]);
+			_hmt.push(['_setAutoPageview', true]);
 		});
  
 		setTimeout(function() {
