--- a/test_cnzz.html
+++ b/test_cnzz.html
@@ -38,11 +38,11 @@
 			_czc.push(['_trackEvent', "'0音乐测试*", "%播放-", "音乐", "/北京欢迎您\\"]);
 		});
 		$(".span2").bind("click", function() {
-			$("div").text("setAccount");
-			_czc.push(['_setAccount', "30193fea3a2c0b2b25a9e82fb7cc5aba");
+			$("div").text("点了setAccount");
+			_czc.push(['_setAccount', "30193fea3a2c0b2b25a9e82fb7cc5aba"]);
 		});
 		$(".span3").bind("click", function() {
-			$("div").text("setAutoPageview");
+			$("div").text("点了setAutoPageview");
 			_czc.push(['_setAutoPageview', true]);
 		});
  
