--- a/test.html
+++ b/test.html
@@ -40,13 +40,14 @@
 			_hmt.push(['_trackEvent', "'0音乐测试*", "%播放-", "音乐", "/北京欢迎您\\"]);
 		});
 		$(".span2").bind("click", function() {
-			$("div").text("setAccount");
-			_hmt.push(['_setAccount', "30193fea3a2c0b2b25a9e82fb7cc5aba");
+			$("div").text("点了setAccount");
+			_hmt.push(['_setAccount', "30193fea3a2c0b2b25a9e82fb7cc5aba"]);
 		});
 		$(".span3").bind("click", function() {
-			$("div").text("setAutoPageview");
+			$("div").text("点了setAutoPageview");
 			_hmt.push(['_setAutoPageview', true]);
 		});
+
  
 		setTimeout(function() {
 			$("ins").each(function() {
