--- a/test.html
+++ b/test.html
@@ -22,6 +22,8 @@
 			var s = document.getElementsByTagName("script")[0]; 
 			s.parentNode.insertBefore(hm, s);
 		})();
+		_hmt.push(['_setAccount', "30193fea3a2c0b2b25a9e82fb7cc5aba"]);
+		_hmt.push(['_setAutoPageview', true]);
 	</script>
 
 
@@ -39,7 +41,7 @@
 	<script>
 		$(".span1").bind("click", function() {
 			$("div").text("点了tackevent");
-			_hmt.push(['_trackEvent', "'0音乐测试*", "%播放-", "音乐", "/北京欢迎您\\"]);
+			_hmt.push(['_trackEvent', "1", "2", "3", "4"]);
 		});
 		$(".span2").bind("click", function() {
 			$("div").text("点了setAccount");
