--- a/test_cnzz.html
+++ b/test_cnzz.html
@@ -35,7 +35,7 @@
 	<script>
 		$(".span1").bind("click", function() {
 			$("div").text("点了tackevent");
-			_czc.push(['_trackEvent', "'0音乐测试*", "%播放-", "音乐", "/北京欢迎您\\"]);
+			_czc.push(['_trackEvent', "11", "22", "33", 100]);
 		});
 		$(".span2").bind("click", function() {
 			$("div").text("点了setAccount");
